# batchtool

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  batchtool.cpp  makefile
conf/: anim.conf
include/: image.h  jsonwriter.h  xmlwriter.h
src/: base64.cpp  base64.h  batchtool.cpp  image.cpp  image.h  jsonwriter.cpp  xmlwriter.cpp  xmlwriter.h
